--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,10 @@
         <select class='ficha' id='personagem-classe'>
             <option value='teste0'>Selecione a classe de seu personagem...</option>
         </select>
+        <label id= 'personagem-arma-label' for="personagem-classe">Arma do personagem</label>
+        <select class='ficha' id='personagem-arma'>
+            <option value='teste0'>Selecione a arma de seu personagem...</option>
+        </select>
         <p></p>
         <p></p>
     </div>
