--- a/templates/home.html
+++ b/templates/home.html
@@ -15,33 +15,35 @@
         <p></p>
         <label for="personagem-raca">Raça do personagem</label>
         <select class='ficha' id='personagem-raca' onchange="changeRace()">
-            <option value='teste0'>Selecione a raça de seu personagem...</option>
-            <option value='teste1'>Gnomo</option>
-            <option value='teste2'>Humano</option>
+            <option value='blank'>Selecione a raça de seu personagem...</option>
+            <option value='/api/races/dwarf'>Dwarf</option>
+            <option value='/api/races/elf'>Elf</option>
+            <option value='/api/races/halfling'>Halfling</option>
+            <option value='/api/races/human'>Human</option>
         </select>
         <p></p>
         <label id= 'personagem-classe-label' for="personagem-classe">Classe do personagem</label>
-        <select class='ficha' id='personagem-classe'>
-            <option value='teste0'>Selecione a classe de seu personagem...</option>
-        </select>
-        <label id= 'personagem-arma-label' for="personagem-classe">Arma do personagem</label>
-        <select class='ficha' id='personagem-arma'>
-            <option value='teste0'>Selecione a arma de seu personagem...</option>
+        <select class='ficha' id='personagem-classe' onchange="changeClass()">
+            <option value='blank'>Selecione a classe de seu personagem...</option>
+            <option value='/api/classes/cleric'>Cleric</option>
+            <option value='/api/classes/fighter'>Fighter</option>
+            <option value='/api/classes/rogue'>Rogue</option>
+            <option value='/api/classes/wizard'>Wizard</option>
         </select>
         <p></p>
+        <label id= 'personagem-arma-label' for="personagem-arma" >Arma do personagem</label>
+        <select class='ficha' id='personagem-arma'>
+            <option value='blank'>Selecione a arma de seu personagem...</option>
+        </select>
         <p></p>
     </div>
 
     <script>
-        /*function changeRace() {
-            if (document.getElementById("personagem-raca").value == "teste0"){
-                document.getElementById("personagem-classe-label").hidden = true
-                document.getElementById("personagem-classe").hidden = true
-            }
-            else {
-                document.getElementById("personagem-classe-label").hidden = false
-                document.getElementById("personagem-classe").hidden = false
-            }  
-        }*/
+        function changeRace() {
+            console.log(document.getElementById('personagem-raca').value)
+        }  
+        function changeClass() {
+            console.log(document.getElementById('personagem-classe').value)
+        }  
     </script>
 {% endblock %}
