Adicionado pagina de criação de ficha e carregamento das classes e raças pelo backend

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,5 @@
 
 {% block content %}
     <a href="/ficha/">Ficha Teste</a>
+    <p><a href="/cria_ficha/">Criar nova ficha</a></p>
 {% endblock %}
