--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,18 @@
 {% load socialaccount %}
 {% providers_media_js %}
 <html lang="pt-br">
+<style>
+    /*header {
+        position: fixed;
+        width: 100%;
+    }*/
+    body {
+        background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2015/10/20/821172/c004d7a5c95ac51f03e11060f3757374.jpg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
