--- a/templates/home.html
+++ b/templates/home.html
@@ -4,5 +4,6 @@
 
 {% block content %}
     <a href="/ficha/">Ficha Teste</a>
-    <p><a href="/cria_ficha/">Criar nova ficha</a></p>
+    <p></p>
+    <a href="/cria_ficha/">Criar nova ficha</a>
 {% endblock %}
