--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
         position: fixed;
         width: 100%;
     }*/
+    * {
+        box-sizing: border-box;
+    }
     body {
         background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2015/10/20/821172/c004d7a5c95ac51f03e11060f3757374.jpg);
         background-repeat: no-repeat;
