--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,11 @@
         box-sizing: border-box;
     }
     body {
-        background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2015/10/20/821172/c004d7a5c95ac51f03e11060f3757374.jpg);
+         background-image: url("https://i.pinimg.com/originals/ba/bf/eb/babfebb6a1985cdd8d3f9a59d860b667.jpg");
         background-repeat: no-repeat;
+        background-position: center;
         background-attachment: fixed;
-        background-size: cover;
+        background-size: 100% 100%;
     }
 </style>
 <head>
