--- a/templates/classe.html
+++ b/templates/classe.html
@@ -5,18 +5,17 @@
 {% block content %}
     <form action="" method="POST">
         {% csrf_token %}
-        <h2>Build your Character</h2>
+        <h2>Choose {{ choose }} {{ name }} for your character</h2>
         <p></p>
-        <div id="div_name">
-             <input type="text" id="name" name="name">
+        <div id="div_radio" >
+            {% for item in value %}
+                <input type="checkbox" id="{{ name }}" name="{{ item.index }}" value= "{{ item.name }}">
+                <label for="{{ name }}">{{ item.name }}</label>
+                <br>
+            {%endfor%}
         </div>
         <p></p>
         <input type="submit" id="bt_next">
     </form>
-
-    <script>
-
-    </script>
-
 
 {% endblock %}
