--- a/templates/home.html
+++ b/templates/home.html
@@ -6,4 +6,5 @@
     <a href="/ficha/">Ficha Teste</a>
     <p></p>
     <a href="/cria_ficha/">Criar nova ficha</a>
+    <p style="color:white"> Você entrou como: {{user.username}}</p>
 {% endblock %}
