Adicionando features e spell a criação de ficha

--- a/templates/cria_ficha.html
+++ b/templates/cria_ficha.html
@@ -8,6 +8,7 @@
         <h2>Build your Character</h2>
         <p></p>
         <div id="div_name">
+            <h3>Choose a name for your character</h3>
              <input type="text" id="name" name="name">
         </div>
         <p></p>
