--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,34 @@
-{% extends 'base.html' %}                   <!-- Traz todo o conteudo de "base.html" pra ca -->
+{% extends 'base.html' %}
+<!-- Traz todo o conteudo de "base.html" pra ca -->
 
-{% block title %}Loja Python{% endblock %}  <!-- Muda o titulo da pagina -->
+
+{% block title %}Loja Python{% endblock %}
+<!-- Muda o titulo da pagina -->
+
 
 {% block content %}
-    <a href="/ficha/">Ficha Teste</a>
-    <p></p>
-    <a href="/cria_ficha/">Criar nova ficha</a>
-    <p style="color:white"> Você entrou como: {{user.username}}</p>
+<div class="col-md-12">
+    <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "
+        class="home-ground ">
+        <div style="justify-content: center; display: flex;" class="pt-3 col-md-12">
+
+            <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);margin-right: 25px;" class="col-md-2">
+                <a style="text-decoration: none;margin-top: 50px; font-size: large; color: rgb(243, 243, 243); font-weight: 600;"
+                    class="" href="/ficha/">Ficha Teste</a>
+            </div>
+
+            <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);" class="col-md-2">
+                <a style="text-decoration: none;margin-top: 50px; font-size: large;color: rgb(243, 243, 243);font-weight: 600"
+                    href="/cria_ficha/">Criar nova ficha</a>
+            </div>
+        </div>
+            <div class="col-md-12">
+            <p style="color:white;margin-top: 50px;color: rgb(221, 7, 139);font-weight: 500"> Você entrou como:
+                {{user.username}}</p>
+               
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
